Se Modifica Proyecto

--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@
             </p>
         </article>
 
+        <article class="titulo2">
+            <h2>HABILIDADES</h2>
+            <p> PYTHON <br>
+                GIT <br>
+                HTML<br>
+                CSS<br>
+            </p>
+            <img src="img/GIT_IMAGE (1).jpg" />
+        </article>
+
+        <article class="titulo2">
+            <h2>INTERESES</h2>
+            <p> DEPORTES <br>
+                NATURALEZA<br>
+                PROTECCION DE ANIMALES<br>
+                MUSICA
+            </p>
+        </article>
+
     </section>
     
 </body>
