Modificacion de 2 archivos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,12 +29,13 @@
 
         <article class="titulo2">
             <h2>SOBRE MI</h2>
-            <p> nose que ponerrr
-                rr
-                rrrrr
-                rrrrrr
-                rrrrrrrrrrr
-                rrrrrr
+            <p> Hola, soy nuevo en el mundo de la Programacion.
+                Me inicie por curiosidad y ahora estoy seguro
+                que elegi bien. Hago deporte y cuando se puede 
+                tocamos musica con mis amigos. Quiero seguir aprendiendo
+                Python por lo sencillo y potente que es. Aun no tome la decision
+                sobre que rama de la programacion elegir pero estara entre
+                trabajar con datos, movil y web.
             </p>
         </article>
 
