Se termino Maquetado y corrigieron errores

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         </article>
 
     </section>
+
+    <footer>
+        <a href="mailto:santi_155231631@hotmail.com"> Contactame </a>
+    </footer>
     
 </body>
 
