Modificacion de Archivo se edito el footer

--- a/index.html
+++ b/index.html
@@ -61,8 +61,18 @@
     </section>
 
     <footer>
+        <section>
+            <p>
+                UTN - LA RIOJA - ARGENTINA <br>
+                Derechos Reservados 2022
+            </p>
+        </section>
+
+
         <a href="mailto:santi_155231631@hotmail.com"> Contactame </a>
+
     </footer>
+
     
 </body>
 
